--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,6 +5,9 @@ description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
 
+[lints.rust]
+unexpected_cfgs = { level = "allow", check-cfg = ['cfg(cargo_clippy)'] }
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
@@ -30,5 +33,5 @@ rusttype = "0.9"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.24"
-objc = "0.2"
+objc = "0.2.7"
 
