feat: 开机自启动 & 全局快捷键 & 下载文件并打开下载位置

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,12 +31,16 @@ tokio = { version = "1", features = ["sync"] }
 image = "0.24"
 imageproc = "0.23"
 rusttype = "0.9"
+tauri-plugin-upload = "2"
+tauri-plugin-http = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.24"
 objc = "0.2.7"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-autostart = "2"
+tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2"
 tauri-plugin-window-state = "2"
 
