--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,7 @@ imageproc = "0.23"
 rusttype = "0.9"
 tauri-plugin-upload = "2"
 tauri-plugin-http = "2"
+tauri-plugin-fs = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.24"
