--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,11 +29,15 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["sync"] }
 image = "0.24"
+hostname = "0.3"
+uuid = { version = "1.6", features = ["v4", "v5"] }
+mac_address = "1.1"
+tauri-plugin-http = "2"
 imageproc = "0.23"
 rusttype = "0.9"
 tauri-plugin-upload = "2"
-tauri-plugin-http = "2"
 tauri-plugin-fs = "2"
+tauri-plugin-os = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.24"
