--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-os": "~2",
+    "@tauri-apps/plugin-store": "~2",
     "@tauri-apps/plugin-upload": "~2",
     "@tauri-apps/plugin-window-state": "~2",
     "@types/crypto-js": "^4.2.2",
