--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,7 @@ rusttype = "0.9"
 tauri-plugin-upload = "2"
 tauri-plugin-fs = "2"
 tauri-plugin-os = "2"
+tauri-plugin-store = "2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
