--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@tauri-apps/plugin-window-state": "~2",
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
