--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
+prost-build = "0.12"
 
 [dependencies]
 tauri = { version = "2", features = ["tray-icon"] }
@@ -27,7 +28,7 @@ tauri-plugin-dialog = "2"
 tauri-plugin-clipboard-manager = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["sync"] }
+tokio = { version = "1", features = ["full"] }
 image = "0.24"
 hostname = "0.3"
 uuid = { version = "1.6", features = ["v4", "v5"] }
@@ -40,6 +41,18 @@ tauri-plugin-fs = "2"
 tauri-plugin-os = "2"
 tauri-plugin-store = "2"
 tauri-plugin-notification = "2"
+prost = "0.12"
+prost-types = "0.12"
+bytes = "1.0"
+base64 = "0.21"
+tokio-util = { version = "0.7", features = ["codec"] }
+futures = "0.3"
+async-trait = "0.1"
+parking_lot = "0.12"
+thiserror = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+once_cell = "1.19"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
